--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -1,8 +1,8 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: #312450;
-		font-family: 'Oswald', sans-serif;
+		color: $text-color;
+		font-family: $font-family-1;
 		font-size: 16.5pt;
 		font-weight: normal;
 		line-height: 1.75;
@@ -23,7 +23,6 @@
 	a {
     transition: color 1s ease;
     transition: border-bottom-color 1s ease;
-		border-bottom: dotted 1px rgba(255, 255, 255, 0.35);
 		color: inherit;
 		text-decoration: none;
 
