--- a/assets/sass/components/_wrapper.scss
+++ b/assets/sass/components/_wrapper.scss
@@ -22,33 +22,21 @@
 		}
 
 		&.alt {
-			background-color: #312450;
+			background-color: $bg;
 		}
 
 		&.style1 {
-			background-color: #72A0C1;
+			background-color: $bg-light;
 		}
 
 		&.style1-alt {
-			background-color: darken(#0048BA, 10);
+			background-color: $bg-dark;
 		}
 
 		&.style2 {
 			background-color: #5D8AA8;
 		}
-
-		&.style2-alt {
-			background-color: darken(#72A0C1, 10);
-		}
-
-		&.style3 {
-			background-color: #b74e91;
-		}
-
-		&.style3-alt {
-			background-color: darken(#b74e91, 10);
-		}
-
+		
 		&.fullscreen {
 			display: flex;
       flex-direction: column;			
