--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -1,4 +1,5 @@
 $bg: #72A0C1;
+$bg-cta: lighten(#72A0C1, 5);
 $bg-light: lighten(#72A0C1, 10);
 $bg-dark: darken(#72A0C1, 10);
 $text-color: #2c2c2c;
