--- a/assets/sass/master.scss
+++ b/assets/sass/master.scss
@@ -21,6 +21,8 @@
 @import 'components/wrapper';
 @import 'components/button';
 @import 'components/image';
+@import 'components/icon';
+@import 'components/features';
 @import 'dan';
 
 // Layout
