--- a/assets/css/master.css
+++ b/assets/css/master.css
@@ -173,7 +173,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.5em;
+  font-size: 1.5em;
 }
 
 h4 {
@@ -846,7 +846,7 @@ body.is-preload #sidebar nav ul li {
   }
 }
 #sidebar + #wrapper > .wrapper > .inner {
-  margin: 1.5em auto;
+  margin: 0 auto;
 }
 
 /*# sourceMappingURL=master.css.map */
