remove: removed sp-pixel element for now

--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -83,7 +83,7 @@ button,
 
 		&:hover {
 			border-color: $text-color !important;
-      background: $bg-dark !important;
+      background: $cornflower !important;
       color: $text-neutral !important;
 			&:after {
 				opacity: 0.05;
