--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -2,6 +2,8 @@ $bg: #72A0C1;
 $bg-cta: lighten(#72A0C1, 5);
 $bg-light: lighten(#72A0C1, 10);
 $bg-dark: darken(#72A0C1, 10);
+$cornflower: #8095FF;
+$cornflower-alt: darken(#8095FF, 5);
 $text-color: #2c2c2c;
 $text-neutral: #EFEFEF;
 
