--- a/assets/sass/dan.scss
+++ b/assets/sass/dan.scss
@@ -25,7 +25,7 @@
     @return $result;
 }
 
-$size: 20px;
+$size: 0.5em;
 
 $t: transparent;
 $b: #2c2c2c;
@@ -61,12 +61,12 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
     display: block;
     width: calc(5 * #{$size});
     height: calc(5 * #{$size});
-    // margin: 0 auto;
+    margin: 0 auto;
 
 
     &::after {
         content: '';
-        display: flex;
+        display: block;
         width: $size;
         height: $size;
         box-shadow:
@@ -76,21 +76,13 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
 
 @include breakpoint('<=large'){
     .sp-pixel {
-        display: block;
-        width: calc(50 * 5px);
-        height: calc(50 * 5px);
-        margin-top: 2rem;
-        margin-right: 1.5rem;
-
-        &::after {
-            content: '';
-            display: inline-block;
-            width: 30px;
-            height: 30px;
-            margin-left: 2rem;
-            box-shadow:
-                pixelize($dan, 5px)
-        }
+        display: none;
     }
 
+}
+
+@include breakpoint('<=medium') {
+    .sp-pixel {
+        display: none;
+    }
 }
