--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -357,7 +357,7 @@ hr.major {
   width: 75em;
 }
 .wrapper > .inner > .title-info {
-  margin-bottom: 4em;
+  margin-bottom: 3em;
 }
 @media screen and (max-width: 1680px) {
   .wrapper > .inner {
@@ -478,12 +478,20 @@ button.small,
 .button.small {
   font-size: 0.4em;
 }
+input[type=submit].centered-medium,
+input[type=reset].centered-medium,
+input[type=button].centered-medium,
+button.centered-medium,
+.button.centered-medium {
+  width: 25%;
+}
 input[type=submit].large,
 input[type=reset].large,
 input[type=button].large,
 button.large,
 .button.large {
   font-size: 0.8em;
+  margin-bottom: 0.5em;
 }
 input[type=submit].cta,
 input[type=reset].cta,
@@ -661,7 +669,6 @@ button:hover:active:after,
   display: block;
   width: calc(5 * 0.5em);
   height: calc(5 * 0.5em);
-  margin: 0 auto;
 }
 .sp-pixel::after {
   content: "";
@@ -671,14 +678,12 @@ button:hover:active:after,
   box-shadow:  0em 0em transparent, 0.5em 0em transparent, 1em 0em transparent, 1.5em 0em transparent, 2em 0em transparent, 2.5em 0em #2c2c2c, 3em 0em #2c2c2c, 3.5em 0em #2c2c2c, 4em 0em #2c2c2c, 4.5em 0em #2c2c2c, 5em 0em #2c2c2c, 5.5em 0em #2c2c2c, 6em 0em #2c2c2c, 6.5em 0em #2c2c2c, 7em 0em transparent, 7.5em 0em transparent, 8em 0em transparent, 8.5em 0em transparent, 9em 0em transparent, 9.5em 0em transparent, 10em 0em transparent, 10.5em 0em transparent, 11em 0em transparent, 0em 0.5em transparent, 0.5em 0.5em transparent, 1em 0.5em transparent, 1.5em 0.5em transparent, 2em 0.5em #2c2c2c, 2.5em 0.5em #2c2c2c, 3em 0.5em #2c2c2c, 3.5em 0.5em #2c2c2c, 4em 0.5em #2c2c2c, 4.5em 0.5em #2c2c2c, 5em 0.5em #2c2c2c, 5.5em 0.5em #2c2c2c, 6em 0.5em #2c2c2c, 6.5em 0.5em #2c2c2c, 7em 0.5em #2c2c2c, 7.5em 0.5em transparent, 8em 0.5em transparent, 8.5em 0.5em transparent, 9em 0.5em transparent, 9.5em 0.5em transparent, 10em 0.5em transparent, 10.5em 0.5em transparent, 11em 0.5em transparent, 0em 1em transparent, 0.5em 1em transparent, 1em 1em transparent, 1.5em 1em #2c2c2c, 2em 1em #2c2c2c, 2.5em 1em #2c2c2c, 3em 1em #2c2c2c, 3.5em 1em #2c2c2c, 4em 1em #2c2c2c, 4.5em 1em #2c2c2c, 5em 1em #2c2c2c, 5.5em 1em #2c2c2c, 6em 1em #2c2c2c, 6.5em 1em #2c2c2c, 7em 1em #2c2c2c, 7.5em 1em #2c2c2c, 8em 1em #2c2c2c, 8.5em 1em #2c2c2c, 9em 1em #2c2c2c, 9.5em 1em #2c2c2c, 10em 1em transparent, 10.5em 1em transparent, 11em 1em transparent, 0em 1.5em transparent, 0.5em 1.5em transparent, 1em 1.5em #2c2c2c, 1.5em 1.5em #2c2c2c, 2em 1.5em #2c2c2c, 2.5em 1.5em #2c2c2c, 3em 1.5em #2c2c2c, 3.5em 1.5em #2c2c2c, 4em 1.5em #2c2c2c, 4.5em 1.5em #2c2c2c, 5em 1.5em #2c2c2c, 5.5em 1.5em #2c2c2c, 6em 1.5em #2c2c2c, 6.5em 1.5em #2c2c2c, 7em 1.5em transparent, 7.5em 1.5em transparent, 8em 1.5em transparent, 8.5em 1.5em transparent, 9em 1.5em transparent, 9.5em 1.5em transparent, 10em 1.5em transparent, 10.5em 1.5em transparent, 11em 1.5em transparent, 0em 2em transparent, 0.5em 2em #2c2c2c, 1em 2em #2c2c2c, 1.5em 2em #2c2c2c, 2em 2em #f8ece7, 2.5em 2em #f8ece7, 3em 2em #f8ece7, 3.5em 2em #f8ece7, 4em 2em #f8ece7, 4.5em 2em #f8ece7, 5em 2em #f8ece7, 5.5em 2em #f8ece7, 6em 2em #f8ece7, 6.5em 2em #f8ece7, 7em 2em transparent, 7.5em 2em transparent, 8em 2em transparent, 8.5em 2em transparent, 9em 2em transparent, 9.5em 2em transparent, 10em 2em transparent, 10.5em 2em transparent, 11em 2em transparent, 0em 2.5em transparent, 0.5em 2.5em transparent, 1em 2.5em #211a23, 1.5em 2.5em #f8ece7, 2em 2.5em #f8ece7, 2.5em 2.5em #f8ece7, 3em 2.5em #f8ece7, 3.5em 2.5em #f8ece7, 4em 2.5em #f8ece7, 4.5em 2.5em #f8ece7, 5em 2.5em #f8ece7, 5.5em 2.5em #f8ece7, 6em 2.5em #f8ece7, 6.5em 2.5em #f8ece7, 7em 2.5em transparent, 7.5em 2.5em transparent, 8em 2.5em transparent, 8.5em 2.5em transparent, 9em 2.5em transparent, 9.5em 2.5em transparent, 10em 2.5em transparent, 10.5em 2.5em transparent, 11em 2.5em transparent, 0em 3em transparent, 0.5em 3em transparent, 1em 3em #211a23, 1.5em 3em #f8ece7, 2em 3em #211a23, 2.5em 3em #211a23, 3em 3em #211a23, 3.5em 3em #211a23, 4em 3em #f8ece7, 4.5em 3em #f8ece7, 5em 3em #f8ece7, 5.5em 3em #211a23, 6em 3em #211a23, 6.5em 3em #211a23, 7em 3em transparent, 7.5em 3em transparent, 8em 3em transparent, 8.5em 3em transparent, 9em 3em transparent, 9.5em 3em transparent, 10em 3em transparent, 10.5em 3em transparent, 11em 3em transparent, 0em 3.5em transparent, 0.5em 3.5em transparent, 1em 3.5em #211a23, 1.5em 3.5em #f8ece7, 2em 3.5em #8f8e8e, 2.5em 3.5em #8f8e8e, 3em 3.5em #8f8e8e, 3.5em 3.5em #8f8e8e, 4em 3.5em #f8ece7, 4.5em 3.5em #f8ece7, 5em 3.5em #8f8e8e, 5.5em 3.5em #8f8e8e, 6em 3.5em #8f8e8e, 6.5em 3.5em #8f8e8e, 7em 3.5em transparent, 7.5em 3.5em transparent, 8em 3.5em transparent, 8.5em 3.5em transparent, 9em 3.5em transparent, 9.5em 3.5em transparent, 10em 3.5em transparent, 10.5em 3.5em transparent, 11em 3.5em transparent, 0em 4em transparent, 0.5em 4em #8f8e8e, 1em 4em #8f8e8e, 1.5em 4em #8f8e8e, 2em 4em #8f8e8e, 2.5em 4em #efefef, 3em 4em #4d1b09, 3.5em 4em #8f8e8e, 4em 4em #8f8e8e, 4.5em 4em #8f8e8e, 5em 4em #8f8e8e, 5.5em 4em #efefef, 6em 4em #4d1b09, 6.5em 4em #8f8e8e, 7em 4em transparent, 7.5em 4em transparent, 8em 4em transparent, 8.5em 4em transparent, 9em 4em transparent, 9.5em 4em transparent, 10em 4em transparent, 10.5em 4em transparent, 11em 4em transparent, 0em 4.5em transparent, 0.5em 4.5em #f8ece7, 1em 4.5em #f8ece7, 1.5em 4.5em #f8ece7, 2em 4.5em #8f8e8e, 2.5em 4.5em #8f8e8e, 3em 4.5em #8f8e8e, 3.5em 4.5em #8f8e8e, 4em 4.5em #f8ece7, 4.5em 4.5em #dbccc6, 5em 4.5em #8f8e8e, 5.5em 4.5em #8f8e8e, 6em 4.5em #8f8e8e, 6.5em 4.5em #8f8e8e, 7em 4.5em transparent, 7.5em 4.5em transparent, 8em 4.5em transparent, 8.5em 4.5em transparent, 9em 4.5em transparent, 9.5em 4.5em transparent, 10em 4.5em transparent, 10.5em 4.5em transparent, 11em 4.5em transparent, 0em 5em transparent, 0.5em 5em transparent, 1em 5em #f8ece7, 1.5em 5em #f8ece7, 2em 5em #f8ece7, 2.5em 5em #f8ece7, 3em 5em #f8ece7, 3.5em 5em #f8ece7, 4em 5em #f8ece7, 4.5em 5em #dbccc6, 5em 5em #f8ece7, 5.5em 5em #f8ece7, 6em 5em #f8ece7, 6.5em 5em #f8ece7, 7em 5em transparent, 7.5em 5em transparent, 8em 5em transparent, 8.5em 5em transparent, 9em 5em transparent, 9.5em 5em transparent, 10em 5em transparent, 10.5em 5em transparent, 11em 5em transparent, 0em 5.5em transparent, 0.5em 5.5em transparent, 1em 5.5em #f8ece7, 1.5em 5.5em #f8ece7, 2em 5.5em #f8ece7, 2.5em 5.5em #f8ece7, 3em 5.5em #f8ece7, 3.5em 5.5em #f8ece7, 4em 5.5em #dbccc6, 4.5em 5.5em #dbccc6, 5em 5.5em #f8ece7, 5.5em 5.5em #f8ece7, 6em 5.5em #f8ece7, 6.5em 5.5em #f8ece7, 7em 5.5em transparent, 7.5em 5.5em transparent, 8em 5.5em transparent, 8.5em 5.5em transparent, 9em 5.5em transparent, 9.5em 5.5em transparent, 10em 5.5em transparent, 10.5em 5.5em transparent, 11em 5.5em transparent, 0em 6em transparent, 0.5em 6em transparent, 1em 6em transparent, 1.5em 6em #f8ece7, 2em 6em #f8ece7, 2.5em 6em #f8ece7, 3em 6em #f8ece7, 3.5em 6em #f8ece7, 4em 6em #f8ece7, 4.5em 6em #f8ece7, 5em 6em #f8ece7, 5.5em 6em #f8ece7, 6em 6em #f8ece7, 6.5em 6em #f8ece7, 7em 6em transparent, 7.5em 6em transparent, 8em 6em transparent, 8.5em 6em transparent, 9em 6em transparent, 9.5em 6em transparent, 10em 6em transparent, 10.5em 6em transparent, 11em 6em transparent, 0em 6.5em transparent, 0.5em 6.5em transparent, 1em 6.5em transparent, 1.5em 6.5em #f8ece7, 2em 6.5em #f8ece7, 2.5em 6.5em #f8ece7, 3em 6.5em #f8ece7, 3.5em 6.5em #dbccc6, 4em 6.5em #f8ece7, 4.5em 6.5em #f8ece7, 5em 6.5em #f8ece7, 5.5em 6.5em #f8ece7, 6em 6.5em #f8ece7, 6.5em 6.5em #f8ece7, 7em 6.5em transparent, 7.5em 6.5em transparent, 8em 6.5em transparent, 8.5em 6.5em transparent, 9em 6.5em transparent, 9.5em 6.5em transparent, 10em 6.5em transparent, 10.5em 6.5em transparent, 11em 6.5em transparent, 0em 7em transparent, 0.5em 7em transparent, 1em 7em transparent, 1.5em 7em transparent, 2em 7em #f8ece7, 2.5em 7em #f8ece7, 3em 7em #f8ece7, 3.5em 7em #dbccc6, 4em 7em #dbccc6, 4.5em 7em #dbccc6, 5em 7em #dbccc6, 5.5em 7em #f8ece7, 6em 7em #f8ece7, 6.5em 7em #f8ece7, 7em 7em transparent, 7.5em 7em transparent, 8em 7em transparent, 8.5em 7em transparent, 9em 7em transparent, 9.5em 7em transparent, 10em 7em transparent, 10.5em 7em transparent, 11em 7em transparent, 0em 7.5em transparent, 0.5em 7.5em transparent, 1em 7.5em transparent, 1.5em 7.5em transparent, 2em 7.5em transparent, 2.5em 7.5em #f8ece7, 3em 7.5em #f8ece7, 3.5em 7.5em #f8ece7, 4em 7.5em #f8ece7, 4.5em 7.5em #f8ece7, 5em 7.5em #f8ece7, 5.5em 7.5em #f8ece7, 6em 7.5em #f8ece7, 6.5em 7.5em transparent, 7em 7.5em transparent, 7.5em 7.5em transparent, 8em 7.5em transparent, 8.5em 7.5em transparent, 9em 7.5em transparent, 9.5em 7.5em transparent, 10em 7.5em transparent, 10.5em 7.5em transparent, 11em 7.5em transparent, 0em 8em transparent, 0.5em 8em transparent, 1em 8em transparent, 1.5em 8em transparent, 2em 8em transparent, 2.5em 8em transparent, 3em 8em #f8ece7, 3.5em 8em #f8ece7, 4em 8em #f8ece7, 4.5em 8em #f8ece7, 5em 8em #f8ece7, 5.5em 8em #f8ece7, 6em 8em #f8ece7, 6.5em 8em transparent, 7em 8em transparent, 7.5em 8em transparent, 8em 8em transparent, 8.5em 8em transparent, 9em 8em transparent, 9.5em 8em transparent, 10em 8em transparent, 10.5em 8em transparent, 11em 8em transparent, 0em 8.5em transparent, 0.5em 8.5em transparent, 1em 8.5em transparent, 1.5em 8.5em transparent, 2em 8.5em transparent, 2.5em 8.5em transparent, 3em 8.5em transparent, 3.5em 8.5em #f8ece7, 4em 8.5em #f8ece7, 4.5em 8.5em #f8ece7, 5em 8.5em #f8ece7, 5.5em 8.5em #f8ece7, 6em 8.5em transparent, 6.5em 8.5em transparent, 7em 8.5em transparent, 7.5em 8.5em transparent, 8em 8.5em transparent, 8.5em 8.5em transparent, 9em 8.5em transparent, 9.5em 8.5em transparent, 10em 8.5em transparent, 10.5em 8.5em transparent, 11em 8.5em transparent;
 }
 
-@media screen and (max-width: 1280px) {
-  .sp-pixel {
-    display: none;
-  }
-}
 @media screen and (max-width: 980px) {
   .sp-pixel {
-    display: none;
+    display: block;
+    width: 0.5em;
+    height: 5em;
+    margin-left: 25%;
   }
 }
 #sidebar {
