--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -55,10 +55,15 @@ button,
 
 		&.small {
 			font-size: 0.4em;
-		}
+    }
+    
+    &.centered-medium {
+      width: 25%;
+    }
 
 		&.large {
-			font-size: 0.8em;
+      font-size: 0.8em;
+      margin-bottom: 0.5em;
 		}
     &.cta {
       background: $bg-cta;
