--- a/assets/sass/dan.scss
+++ b/assets/sass/dan.scss
@@ -61,8 +61,6 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
     display: block;
     width: calc(5 * #{$size});
     height: calc(5 * #{$size});
-    margin: 0 auto;
-
 
     &::after {
         content: '';
@@ -74,15 +72,18 @@ $dan: (($t, $t, $t, $t, $t, $b, $b, $b, $b, $b, $b, $b, $b, $b, $t, $t, $t, $t, 
     }
 }
 
-@include breakpoint('<=large'){
-    .sp-pixel {
-        display: none;
-    }
+// @include breakpoint('<=large'){
+//     .sp-pixel {
+//         display: none;
+//     }
 
-}
+// }
 
 @include breakpoint('<=medium') {
     .sp-pixel {
-        display: none;
+        display: block;
+        width: $size;
+        height: 5em;
+        margin-left: 25%;
     }
 }
