responsiveness: fixing button sizes at smaller vW

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -92,7 +92,7 @@ body {
 /* Type */
 body, input, select, textarea {
   color: #2c2c2c;
-  font-family: "Oswald", sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 16.5pt;
   font-weight: normal;
   line-height: 1.75;
@@ -118,6 +118,7 @@ a {
   transition: border-bottom-color 1s ease;
   color: inherit;
   text-decoration: none;
+  font-family: "Oswald", sans-serif;
 }
 a:hover {
   border-bottom-color: transparent;
@@ -141,6 +142,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #2c2c2c;
   font-weight: bold;
   line-height: 1.5;
+  font-family: "Oswald", sans-serif;
   margin: 0 0 0.5em 0;
 }
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
@@ -688,7 +690,7 @@ button:hover:active:after,
 }
 #sidebar {
   padding: 2.5rem 2.5rem;
-  background: #6c84ff;
+  background: #363636;
   cursor: default;
   height: 100vh;
   left: 0;
