migrated portfolio over to webpack, hopefully with success

--- a/src/css/_vars.scss
+++ b/src/css/_vars.scss
@@ -6,6 +6,7 @@ $cornflower: #8095FF;
 $cornflower-alt: darken(#8095FF, 5);
 $text-color: #2c2c2c;
 $text-neutral: #EFEFEF;
+$text-color-primary: red;
 
 // Fonts
 
