--- a/src/css/_titlecontainer.scss
+++ b/src/css/_titlecontainer.scss
@@ -10,7 +10,7 @@
   & .title-info {
     margin-left: 0.5em;
     padding: 0.5em;
-    background: $cornflower-alt;
+    background: #4f88b1;
     text-align: center;
     border-radius: 10px;
     box-shadow: 2px 2px 2px rgba(0,0,0,0.5);
