--- a/src/css/_sidebar.scss
+++ b/src/css/_sidebar.scss
@@ -56,6 +56,7 @@
       position: relative;
       text-decoration: none;
 			text-transform: uppercase;
+			font-family: $font-family-2;
 
       span {
 				text-transform: lowercase;
