resume: resume link points to the proper url

--- a/src/css/_works.scss
+++ b/src/css/_works.scss
@@ -32,7 +32,7 @@
       }
       &:hover, 
       &:active {
-        border: 5px solid $cornflower-alt;
+        border: 5px solid $bg;
         transition: all 0.2s ease;
       }
     }
