added responsive profile picture

--- a/src/css/components/_image.scss
+++ b/src/css/components/_image.scss
@@ -45,5 +45,11 @@
       width: 100%;
     }
   }
+
+  &.profile-image {
+    @include breakpoint('<=large') {
+      display: none;
+    }
+  }
 }
 
