--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -25,6 +25,7 @@
 @import 'components/icon';
 @import 'components/features';
 @import 'components/titlecontainer';
+@import 'components/image';
 
 // Layout
 @import 'layout/sidebar';
