--- a/src/css/layout/_wrapper.scss
+++ b/src/css/layout/_wrapper.scss
@@ -1,9 +1,9 @@
 #wrapper {
   #sidebar + & {
-    margin-left: 18em;
+    margin-left: _size(sidebar-width);
     @include breakpoint('<=large') {
       margin-left: 0;
-      padding-top: 3.5em;
+      padding-top: _size(sidebar-height);
     }
     @include breakpoint('<=small') {
       padding-top: 0;
