--- a/src/css/components/_wrapper.scss
+++ b/src/css/components/_wrapper.scss
@@ -25,19 +25,19 @@
 			}
 		}
 		&.alt {
-			background-color: $bg;
+			background-color: _palette(bg);
 		}
 
 		&.style1 {
-			background-color: $bg-light;
+			background-color: _palette(bg-alt);
 		}
 
 		&.style1-alt {
-			background-color: $text-neutral;
+			background-color: _palette(accent1);
 		}
 
 		&.style2 {
-			background-color: #5D8AA8;
+			background-color: _palette(accent2);
 		}
 		
 		&.fullscreen {
