--- a/src/css/page/_typography.scss
+++ b/src/css/page/_typography.scss
@@ -1,8 +1,8 @@
 /* Type */
 
 	body, input, select, textarea {
-		color: $text-color;
-		font-family: $font-family-2;
+		color: _palette(fg);
+		font-family: _font(family);
 		font-size: 16.5pt;
 		font-weight: normal;
 		line-height: 1.75;
@@ -25,7 +25,7 @@
     transition: border-bottom-color 1s ease;
 		color: inherit;
 		text-decoration: none;
-		font-family: $font-family-1;
+		font-family: _font(family);
 
 		&:hover {
 			border-bottom-color: transparent;
@@ -50,7 +50,7 @@
 		color: #2c2c2c;
 		font-weight: bold;
 		line-height: 1.5;
-		font-family: $font-family-1;
+		font-family: _font(family);
 		margin: 0 0 (1em * 0.25) 0;
 
 		a {
