added background image for intro section

--- a/src/css/libs/_vars.scss
+++ b/src/css/libs/_vars.scss
@@ -29,7 +29,7 @@ $font: (
 );
 
 $palette: (
-  bg:					#2c2c2c,
+  bg:					#EBEBEB,
   bg-alt:				rgba(255, 255, 255, 0.5),
   fg:					rgba(255,255,255,0.55),
   fg-bold:			#ffffff,
