--- a/src/css/page/_typography.scss
+++ b/src/css/page/_typography.scss
@@ -47,7 +47,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: #2c2c2c;
+		color: _palette(accent1);
 		font-weight: bold;
 		line-height: 1.5;
 		font-family: _font(family);
