--- a/src/css/layout/_sidebar.scss
+++ b/src/css/layout/_sidebar.scss
@@ -53,7 +53,7 @@
     a {
       @include vendor('transition', 'color #{_duration(transition)} ease');
 			border: 0;
-      color: _palette(fg-light);
+      color: _palette(accent1);
       display: block;
       font-size: 0.9em;
       font-weight: _font(weight-bold);
@@ -71,8 +71,7 @@
 					border-radius: 0.2em;
 					bottom: 0;
 					content: '';
-					// height: 0.2em;
-					background: pink;
+					height: 0.2em;
 					position: absolute;
 					right: 0;
 					width: 100%;
@@ -91,7 +90,6 @@
 
 				&:hover {
 					color:#000000;
-					background: _palette(accent3);
 				}
 
 				&.active {
