--- a/src/css/libs/_vars.scss
+++ b/src/css/libs/_vars.scss
@@ -36,10 +36,11 @@ $palette: (
   fg-light:			rgba(255,255,255,0.35),
   border:				rgba(255,255,255,0.15),
   border-bg:			rgba(255,255,255,0.05),
-  accent1:			#5e42a6,
+  accent1:			#663399,
   accent1-alt:		darken(#5e42a6, 10),
   accent2:			#5052b5,
   accent2-alt:		darken(#5052b5, 10),
   accent3:			#b74e91,
-  accent3-alt:		darken(#b74e91, 10)
+  accent3-alt:		darken(#b74e91, 10),
+  p-color1: #000000
 )
