--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,5 +1,6 @@
 @import 'libs/vars';
 @import 'libs/functions';
+@import 'libs/mixins';
 @import 'libs/vendor';
 @import 'libs/html-grid';
 @import 'libs/breakpoints';
