colors: reworking color palettes, revamped about-section

--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -71,7 +71,7 @@ button,
     }
 
 		&.primary {
-      background-color: #ffffff;
+      background-color: _palette(bg-alt);
       color: _palette(accent1);
 			&:after {
 				display: none;
