--- a/src/css/components/_works.scss
+++ b/src/css/components/_works.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     min-height: 22.5rem;
-    margin: 1.5rem;
+    margin: 0.5em 0 0.5rem 0.5rem;
 
     > .image {
       background-position: center center;
@@ -11,10 +11,9 @@
       border-radius: 0;
       display: block;
       position: relative;
-      width: 75em;
+      width: 100em;
 
       img {
-      border-radius: 0;
       display: block;
       width: 100%;
       height: 100%;
@@ -23,7 +22,6 @@
       &:before {
         content: '';
         display: block;
-        height: 100%;
         left: 0;
         position: absolute;
         opacity: 0;
@@ -36,7 +34,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      width: calc(75em - 25em);
+      width: calc(100em - 25em);
       -ms-flex: 1;
 
       > .inner {
@@ -50,7 +48,9 @@
         }
       }
     }
-    
+    > .inner-button__group {
+      @include vendor('display','flex');
+    }
     @include breakpoint('<=xlarge') {
       > .content {
         padding: 4em 4em;
