--- a/src/css/layout/_wrapper.scss
+++ b/src/css/layout/_wrapper.scss
@@ -11,8 +11,8 @@
     > .wrapper {
       > .inner {
         margin: 0 auto;
-        p {
-          color: _palette(p-color1);
+        .about-p {
+          color: _palette(bg);
         }
       }
     }
