--- a/src/css/components/_works.scss
+++ b/src/css/components/_works.scss
@@ -17,6 +17,7 @@
       display: block;
       width: 100%;
       height: 100%;
+      box-shadow: 2px 2px 2px _palette(border-bg)
       }
       
       &:before {
