img: images take up full width at smaller screen sizes, reformatted copy inside of works section

--- a/src/css/components/_icon.scss
+++ b/src/css/components/_icon.scss
@@ -4,7 +4,7 @@
   font-size: 1.5em;
   color: _palette(bg);
   line-height: 2.5em;
-  margin: 0.5em;
+  margin: 0.5em 0 0.5em 0;
 
   & .icon-dark {
     color: _palette(bg-alt);
