--- a/src/css/components/_works.scss
+++ b/src/css/components/_works.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     min-height: 22.5rem;
-    margin: 0.5em 0 0.5rem 0.5rem;
+    margin: 0.5em 0 0.5rem 0;
 
     > .image {
       background-position: center center;
@@ -31,10 +31,11 @@
       }
     }
     > .content {
-      padding: 4em 5em;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
+      padding: 0 2em 5em 2em;
+      @include vendor('display','flex');
+      @include vendor('flex-direction','column');
+      @include vendor('justify-content','center');
+      @include vendor('align-content','center');
       width: calc(100em - 25em);
       -ms-flex: 1;
 
@@ -46,6 +47,10 @@
 
         p {
           color: _palette(p-color1);
+          margin: 1em 0 1em 0;
+        }
+        i {
+          margin: 0 1em 1em 0;
         }
       }
     }
@@ -73,7 +78,7 @@
     @include breakpoint('<=small') {
       > .image {
         height: 75%;
-        min-height: 15em;
+        min-height: 20em;
       }
 
       > .content {
