layout: moved about section up above works, changed bg on works, what do section is now last

--- a/src/css/components/_button.scss
+++ b/src/css/components/_button.scss
@@ -1,8 +1,8 @@
 /* Button */ 
 
-input[type="submit"],
-input[type="reset"],
-input[type="button"],
+input[type=submit],
+input[type=reset],
+input[type=button],
 button,
 .button {
   appearance: none;
