--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -23,6 +23,8 @@
 @import 'page/typography';
 
 // Components
+@import 'components/innerabout';
+@import 'components/innerwhatdo';
 @import 'components/works';
 @import 'components/wrapper';
 @import 'components/button';
