--- a/src/css/page/_typography.scss
+++ b/src/css/page/_typography.scss
@@ -43,7 +43,7 @@
 	}
 
 	h1, h2, h3, h4, h5, h6 {
-		color: _palette(accent1);
+		color: _palette(bg);
 		font-weight: bold;
 		line-height: 1.5;
 		font-family: _font(family);
