--- a/src/css/layout/_wrapper.scss
+++ b/src/css/layout/_wrapper.scss
@@ -11,6 +11,9 @@
     > .wrapper {
       > .inner {
         margin: 0 auto;
+        .h2 {
+          color: _palette(bg);
+        }
         .about-p {
           color: _palette(bg);
         }
