--- a/src/css/libs/_vars.scss
+++ b/src/css/libs/_vars.scss
@@ -34,7 +34,7 @@ $palette: (
   fg:					rgba(255,255,255,0.55),
   fg-bold:			#F0F4F8,
   fg-light:			rgba(255,255,255,0.35),
-  border:				rgba(255,255,255,0.15),
+  border-opacity:				rgba(255,255,255,0.15),
   border-bg:			#829AB1,
   accent1:			#102A43,
   accent1-alt:		darken(#5e42a6, 10),
